Split Information menu into 2 pages and link Matrix Community