@@ -30,7 +30,7 @@ import de.sesu8642.feudaltactics.renderer.MapRenderer;
 @Singleton
 public class MainMenuStage extends MenuStage {
 
-	private static final List<String> BUTTON_TEXTS = ImmutableList.of("Play", "Tutorial", "Preferences", "Information");
+	private static final List<String> BUTTON_TEXTS = List.of("Play", "Tutorial", "Preferences", "Information");
 
 	/**
 	 * Constructor. See {@link MenuStage#MenuStage}
